syntax="proto3";

option go_package = "./pkg/pb/admin";

service AdminService {
  rpc CheckIsAdmin(CheckIsAdminRequest) returns (CheckIsAdminResponse);
  rpc CheckUserAuth(CheckUserAuthRequest) returns (CheckUserAuthResponse);
}

message CheckIsAdminRequest {
  string Token = 1;
}

message CheckIsAdminResponse {
  bool isAuth = 1;
  bool isAdmin = 2;
}

message CheckUserAuthRequest {
  string Token = 1;
}
message CheckUserAuthResponse {
  bool isAuth = 1;
  int32 userId = 2;
}

